--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.2
-	loader_version=0.14.19
+	minecraft_version=1.20.1
+	yarn_mappings=1.20.1+build.10
+	loader_version=0.14.22
 
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = net.lopymine.specificslots
-	archives_base_name = specificslots
-	libgui = 7.1.1+1.19.4
-	modmenu = 6.2.1
-	cloth = 10.0.96
+	archives_base_name = Specific Slots
+	libgui = 8.0.1+1.20
+	modmenu = 7.0.1
+	cloth = 11.1.106
 
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.79.0+1.19.4
+	fabric_version=0.87.0+1.20.1
